--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,3 +15,4 @@ include CONTRIBUTORS
 include COPYING
 include Makefile
 include MANIFEST.in
+prune *.elc *.orig *.rej *~ *.o *.so *.pyc *.swp *.prof
